# magic-climate-ball

./: LICENSE  README.md  baseline_results.csv  main.py  production_temperature_model.pkl  pyproject.toml  server.py  temagami_daily_raw.csv  temagami_features.csv  usage_example.py  weather_data_station_47687_1990_2025.csv  weather_data_station_47687_2008_2025.csv  weather_forecast.py  weather_model_Temagami_ON_47687.pkl
lstm/: lstm-model.py
ml/: production_ml_validation.csv
ml/models_v2/: ml-models.py  ml_model_comparison.csv  ml_validation_results.csv
ml/models_v2_debug/: ml-models-debug.py
ml/models_v3/: clean_ml_features.csv  clean_ml_results.csv  ml-models-v3.py
ml/models_v4/: ml-models-v4-debug.py  ultra_conservative_features.csv
ml/models_v5/: ml-models-v5-debug.py
ml/models_v6/: ml-models-v6.py  production_ml_validation.csv  ultra_clean_ml_features.csv
notebooks/: baseline-modeling.ipynb  clean-feature-eng.ipynb  data-pipeline.ipynb
prophet/prophet-debug/: prophet-debug.py
prophet/prophet-model/: prophet-model.py
prophet/prophet-model2/: prophet-model2.py  prophet_performance_summary.csv  prophet_validation_results.csv
sarima/: sarima-model-performance.py  sarima-model.ipynb  sarima-model.py
tcn/: tcn-model.py
