[project]
name = "magic-climate-ball"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "prophet>=1.1.7",
    "requests>=2.32.3",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]
